# MotorControl

./: .gitignore  CMakeLists.txt  ChuangRui.cpp  ChuangRui_Control.cpp  ChuangRui_Control.h  MotionControl.h  README.md  RTC5impl.h  Rtc5Scan.cpp  Rtc5Scan.h  StreamProcessor.h  config.json  control.cpp  control.h  main.cpp  moto_control.sln  moto_control.vcxproj  moto_control.vcxproj.filters  输出-生成.txt
.codewhale/: instructions.md
assets/: config.json
docs/: USAGE.md
include/libmodbus/: .editorconfig  config.h  modbus-tcp.c  modbus.h
plugins/: moto_log.h
src/: main.cpp
src/control/: CharmRayPlcRegs.h  ChuangRui_Control.cpp  ChuangRui_Control.h  ModbusClient.cpp  ModbusClient.h  MotionControl.h
src/server/: HttpServer.h
test/: test_get_state.cpp  test_modbus_task.cpp  test_plc_regs.cpp
